--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,3 +23,13 @@ a:hover {
 h1, h2, h3 {
   color: #e6edf5;
 }
+
+.site-header {
+  border-bottom: none;
+}
+
+.site-title {
+  font-weight: 800;
+  font-size: 1.5rem;
+  margin-left: 0;
+}
