--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,3 +55,10 @@ h1, h2, h3 {
   display: block;
   margin-bottom: 0.5rem;
 }
+
+.page-content .wrapper {
+  display: grid;
+  grid-template-columns: 220px 1fr;
+  gap: 2rem;
+}
+
